--- a/08-demo/04-study/style.css
+++ b/08-demo/04-study/style.css
@@ -10,9 +10,9 @@
 }
 
 body {
-    background-color: #f3f5f7;
     /* 用来暂时测试 后期再删除 */
     /* height: 30000px; */
+    background-color: #f3f5f7;
 }
 
 /* 清除列表圆点 */
@@ -46,9 +46,9 @@ a {
 /* 1.头部的宽高 边距 */
 .header {
     height: 42px;
-    /* background-color: pink; */
     /*此处外边距层叠 w里面的外边距 上下30 左右居中*/
     margin: 30px auto;
+    /* background-color: pink; */
 }
 
 .logo {
@@ -75,8 +75,8 @@ a {
     display: block;
     height: 42px;
     padding: 0 10px;
-    line-height: 42px;
     font-size: 18px;
+    line-height: 42px;
     color: #050505;
 }
 
@@ -91,8 +91,9 @@ a {
     float: left;
     width: 412px;
     height: 42px;
-    background-color: skyblue;
     margin-left: 70px;
+    background-color: skyblue;
+
 }
 
 /* input文本框高度上下减去1像素为40 */
@@ -101,11 +102,12 @@ a {
     /* 加了内边距15会撑开盒子，所以总体宽度减去15 */
     width: 345px;
     height: 40px;
+    padding-left: 15px;
     border: 1px solid #00a4ff;
     border-right: 0;
-    color: #bfbfbf;
     font-size: 14px;
-    padding-left: 15px;
+    color: #bfbfbf;
+
 }
 
 /* button按钮 */
@@ -115,15 +117,16 @@ a {
     height: 42px;
     /* 按钮button默认有个边框需要我们手动去掉 */
     border: 0;
-    /* border-color: #00a4ff; */
+    /* 背景色前期用来测试 */
+    /* background-color: blue; */
     background: url(../04-study/images/btn.png);
 }
 
 .user {
     float: right;
-    line-height: 42px;
     margin-right: 30px;
     font-size: 14px;
+    line-height: 42px;
     color: #666;
 }
 
@@ -150,8 +153,8 @@ a {
 /* 小li样式*/
 .subnav ul li {
     height: 45px;
-    line-height: 45px;
     padding: 0 20px;
+    line-height: 45px;
 }
 
 /* a链接文字样式 */
@@ -171,24 +174,29 @@ a {
 }
 
 /* 课程表模块 */
+
 /* 大盒子 */
 .course-hd {
     float: right;
     width: 228px;
     height: 300px;
-    background-color: #fff;
     /* 浮动的盒子不会有外边距合并的问题 */
     margin-top: 50px;
+    background-color: #fff;
+
 }
 
 /* 2号盒子头部head */
 .course-hd h2 {
     height: 48px;
     background-color: #9bceea;
-    text-align: center;
-    line-height: 48px;
     font-size: 18px;
+    line-height: 48px;
     color: #fff;
+    text-align: center;
+
+
+
 }
 
 /* 3号盒子 body */
@@ -214,25 +222,25 @@ a {
 .course-bd .all {
     display: block;
     height: 38px;
-    border: 1px solid #00a4ff;
     margin-top: 5px;
-    text-align: center;
-    line-height: 38px;
-    color: #00a4ff;
+    border: 1px solid #00a4ff;
     font-size: 16px;
     font-weight: 700;
+    line-height: 38px;
+    color: #00a4ff;
+    text-align: center;
 }
 
 /* 精品推荐小模块 */
 /* 大盒子 */
 .goods {
     height: 60px;
-    background-color: #fff;
     margin-top: 10px;
-    /* 水平偏移0 垂直偏移4px 模糊距离3 阴影尺寸-2 颜色000，透明度0.3 */
-    box-shadow: 0 2px 10px -1px rgba(0, 0, 0, 0.3);
+    background-color: #fff;
     /* 行高会继承给3个孩子 */
     line-height: 60px;
+    /* 水平偏移0 垂直偏移4px 模糊距离3 阴影尺寸-2 颜色000，透明度0.3 */
+    box-shadow: 0 2px 10px -1px rgba(0, 0, 0, 0.3);
 }
 
 .goods h3 {
@@ -240,7 +248,6 @@ a {
     margin-left: 30px;
     font-size: 16px;
     color: #00a4ff;
-
 }
 
 /* 2号盒子ul与h3的间距 */
@@ -255,10 +262,10 @@ a {
 
 .goods-item li a {
     padding: 0 30px;
-    font-size: 16px;
-    color: #050505;
     /* 给每个小a指定一个左边框 */
     border-left: 1px solid #ccc;
+    font-size: 16px;
+    color: #050505;
 }
 
 .mod-interest {
@@ -285,10 +292,10 @@ a {
 
 .box-hd a {
     float: right;
-    font-size: 12px;
-    color: #a5a5a5;
     margin-top: 10px;
     margin-right: 30px;
+    font-size: 12px;
+    color: #a5a5a5;
 }
 
 /* 把li 的父亲ul 修改的足够宽一行能装开5个盒子就不会换行了 */
@@ -302,9 +309,9 @@ a {
     float: left;
     width: 228px;
     height: 270px;
-    background-color: #ffff;
     margin-right: 15px;
     margin-bottom: 15px;
+    background-color: #ffff;
 }
 
 /* 把图片强制修改和盒子一样宽 就不会超出 */
@@ -321,8 +328,8 @@ a {
 .box-bd ul li h4 {
     margin: 20px 20px 20px 25px;
     font-size: 14px;
-    color: #050505;
     font-weight: 400;
+    color: #050505;
 }
 
 .box-bd .info {
@@ -399,9 +406,9 @@ a {
     float: left;
     width: 228px;
     height: 270px;
-    background-color: #fff;
     margin-left: 15px;
     margin-top: 22px;
+    background-color: #fff;
 }
 
 .code-bd ul li img {
@@ -412,8 +419,8 @@ a {
     margin: 20px 20px 20px 25px;
     margin-top: -100px;
     font-size: 14px;
-    color: #050505;
     font-weight: 400;
+    color: #050505;
 }
 
 .code-bd .info {
@@ -428,8 +435,8 @@ a {
 
 /* footer模块 */
 .footer {
-    margin-top: 40px;
     height: 415px;
+    margin-top: 40px;
     background-color: #fff;
 }
 
@@ -443,9 +450,9 @@ a {
 }
 
 .copyright p {
+    margin: 20px 0 15px 0;
     font-size: 12px;
     color: #666;
-    margin: 20px 0 15px 0;
 }
 
 .copyright .app {
@@ -453,10 +460,10 @@ a {
     width: 118px;
     height: 33px;
     border: 1px solid #00a4ff;
-    text-align: center;
+    font-size: 16px;
     line-height: 33px;
     color: #00a4ff;
-    font-size: 16px;
+    text-align: center;
 }
 
 /* 右侧 */
@@ -470,12 +477,12 @@ a {
 }
 
 .links dl dt {
+    margin-bottom: 5px;
     font-size: 16px;
     color: #333;
-    margin-bottom: 5px;
 }
 
 .links dl dd a {
-    color: #333;
     font-size: 12px;
+    color: #333;
 }
