--- a/15-demo/rem适配方案2-苏宁网移动端头部/css/index.css
+++ b/15-demo/rem适配方案2-苏宁网移动端头部/css/index.css
@@ -1,7 +1,7 @@
 body {
     min-width: 320px;
     max-width: 750px;
-    /* flexible 给我们划分了 10 等份 */
+    /* flexible 给我们划分了10等份，则每1rem=75px， 750px/75=10rem*/
     width: 10rem;
     margin: 0 auto;
     line-height: 1.5;
@@ -32,6 +32,7 @@ img {
 不会让我们页面超过750px */
 @media screen and (min-width: 750px) {
     html {
+        /* 750px / 10px =75px */
         font-size: 75px !important;
     }
 }
